Wed Aug  9 14:54:30 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Add detection of BerkeleyDB version 3.1 to configure.in, ready
	  for new backend.

Tue Aug  8 17:50:47 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Use auto_ptr's and similar to protect TermLists being manipulated by
	  OmExpand so that they're not leaked if an exception happens.

Tue Aug  8 16:36:18 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Add test of mbound.

Tue Aug  8 16:24:27 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Add automatic detection of socklen_t, so that we don't get nasty
	  warnings on Linux just because of solaris.

Tue Aug  8 16:04:09 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Patch to log where connections are from in tcpserver.cc, by
	  Jonathan Fielder of Webtop.

Tue Aug  8 15:58:59 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Implemented some more of the support code for Pythong apitest

Tue Aug  8 14:49:46 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Implement do_get_all_keys() for DA and DB databases.  Untested.

Tue Aug  8 12:26:13 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Fix potential concurrency problem in big file descriptor stuff:
	  although it was very unlikely to have actually caused a problem.

Mon Aug  7 18:41:10 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Progress on apitest Python translation.  test_trivial runs.

Mon Aug  7 18:03:16 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* API addition: added OmInvalidOperationError to report invalid
	  API usage, for example, ending a session when one hasn't been
	  begun.

	* API Change: changed OmWritableDatabase considerably, so that it
	  has begin_session() and end_session() methods instead of lock()
	  and unlock() methods, amongst other things.

Fri Aug  4 18:52:56 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>
